Style the header section and add typography

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,1 +1,6 @@
 @forward "./base/normalize";
+@forward "./base/typography";
+@forward "./base/playground";
+@forward "./layout/grid";
+@forward "./components/header";
+@forward "./components/body";
