Continue working on aside and main.

--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -4,4 +4,8 @@
   --font-bold: 600;
   --color-first: black;
   --color-second: white;
+  --color-third: rgba(69, 144, 206, 100%);
+  --color-fourth: rgba(227, 231, 239, 100%);
+  --color-accent: rgba(231, 182, 74, 100%);
+  font-size: 16px;
 }
