--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,6 +1,7 @@
 @forward "./base/normalize";
 @forward "./base/typography";
-@forward "./base/playground";
 @forward "./layout/grid";
-@forward "./components/header";
 @forward "./components/body";
+@forward "./components/header";
+@forward "./components/aside";
+@forward "./components/main";
