--- a/src/sass/layout/_grid.scss
+++ b/src/sass/layout/_grid.scss
@@ -1,3 +1,4 @@
+//GENERAL
 body {
   width: 100vw;
   height: 100vh;
@@ -6,6 +7,7 @@ body {
   grid-template-rows: 20% 80%;
 }
 
+//HEADER
 header {
   display: grid;
   grid-template-rows: 40% 60%;
@@ -15,7 +17,7 @@ header {
 }
 .header-top {
   display: grid;
-  grid-template-columns: 70% 25%;
+  grid-template-columns: 70% 22%;
   align-items: center;
   justify-content: space-between;
   justify-items: center;
@@ -32,16 +34,71 @@ header {
 }
 .header-bottom {
   display: grid;
-  grid-template-columns: 10% 60% 30%;
+  grid-template-columns: 10% 50% 40%;
   align-items: center;
   justify-items: start;
 }
-main {
-  grid-column: 2 / 3;
-  grid-row: 2 / 3;
+.welcome {
+  display: grid;
+  grid-template-rows: 40% 40%;
+  align-content: center;
+  align-items: end;
+}
+.buttons {
+  display: grid;
+  grid-template-columns: 22% 22% 22%;
+  justify-content: space-evenly;
 }
 
+//ASIDE
 aside {
+  display: grid;
   grid-column: 1 / 2;
   grid-row: 1 / 3;
+}
+nav {
+  display: grid;
+  grid-template-rows: 12% 35% 20%;
+  h1 {
+    align-self: center;
+  }
+}
+.menu {
+  justify-self: start;
+}
+
+//MAIN
+main {
+  height: 100%;
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
+  display: grid;
+  grid-template-columns: 70% 30%;
+  grid-template-rows: 45% 55%;
+}
+
+.projects {
+  grid-column: 1 / 2;
+  grid-row: 1 / 3;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 3rem 1fr 1fr 1fr;
+  h2 {
+    grid-column: 1 / 3;
+  }
+}
+
+.announcements {
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 3rem 1fr;
+}
+.trending {
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 3rem 1fr;
 }
