--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -1,11 +1,15 @@
 :root {
   --font-primary: "Roboto", sans-serif;
-  --font-normal: 400;
   --font-bold: 600;
+  --font-h3: 500;
+  --font-normal: 400;
+  --font-thin: 300;
   --color-first: black;
   --color-second: white;
   --color-third: rgba(69, 144, 206, 100%);
   --color-fourth: rgba(227, 231, 239, 100%);
+  --color-small-text: rgba(99, 99, 99, 100%);
+  --color-small-icon: rgba(51, 51, 51, 100%);
   --color-accent: rgba(231, 182, 74, 100%);
   font-size: 16px;
 }
