--- a/src/sass/layout/_grid.scss
+++ b/src/sass/layout/_grid.scss
@@ -82,9 +82,10 @@ main {
   grid-row: 1 / 3;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 3rem 1fr 1fr 1fr;
+  grid-template-rows: 3rem 1fr 1fr 1fr 2rem;
   h2 {
     grid-column: 1 / 3;
+    align-self: end;
   }
 }
 
