Style"Announcements" and "Trending" sections

--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -1,13 +1,14 @@
 :root {
   --font-primary: "Roboto", sans-serif;
   --font-bold: 600;
-  --font-h3: 500;
+  --font-boldish: 500;
   --font-normal: 400;
   --font-thin: 300;
   --color-first: black;
   --color-second: white;
   --color-third: rgba(69, 144, 206, 100%);
   --color-fourth: rgba(227, 231, 239, 100%);
+  --color-small-line: rgba(133, 133, 133, 100%);
   --color-small-text: rgba(99, 99, 99, 100%);
   --color-small-icon: rgba(51, 51, 51, 100%);
   --color-accent: rgba(231, 182, 74, 100%);
