--- a/src/sass/components/_main.scss
+++ b/src/sass/components/_main.scss
@@ -4,12 +4,12 @@ main {
   background-color: var(--color-fourth);
   h2 {
     font-size: 1rem;
-    font-weight: var(--font-normal);
+    font-weight: var(--font-boldish);
     margin: 0 0.8rem;
   }
   h3 {
     font-size: 0.9rem;
-    font-weight: var(--font-h3);
+    font-weight: var(--font-boldish);
   }
 }
 .project {
@@ -36,5 +36,71 @@ main {
 .icons {
   i {
     padding: 0 1rem;
+  }
+}
+.announcements {
+  h2 {
+    margin: 0 0 0 0.4rem;
+  }
+  h3 {
+    font-size: 0.7rem;
+    margin-bottom: 2px;
+  }
+  section {
+    font-size: 0.6rem;
+    color: var(--color-small-text);
+  }
+
+  .updates {
+    margin: 0.8rem 1.2rem 0.8rem 0.4rem;
+    padding: 0.8rem 1.6rem;
+    background-color: var(--color-second);
+    border-radius: 10px;
+  }
+  .update {
+    border-bottom: 0.5px solid var(--color-small-line);
+  }
+  .update:last-child {
+    border: none;
+  }
+}
+.trending {
+  margin-top: 0.6rem;
+  h2 {
+    margin: 0 0 0 0.4rem;
+  }
+  .users {
+    margin: 0.8rem 1.2rem 0rem 0.4rem;
+    padding: 0.4rem 1rem;
+    background-color: var(--color-second);
+    border-radius: 10px;
+  }
+  .user {
+    margin: 0;
+    padding: 0;
+  }
+
+  img {
+    display: block;
+    padding: 0.3em;
+    border-radius: 100%;
+    width: 1.2em;
+    height: 1.2em;
+  }
+
+  .tagline {
+    display: block;
+  }
+  .trent {
+    background-color: rgb(251, 141, 141);
+  }
+  .hunter {
+    background-color: rgb(17, 166, 27);
+  }
+  .wendy {
+    background-color: rgb(134, 107, 231);
+  }
+  .gg {
+    background-color: rgb(76, 114, 188);
   }
 }
