--- a/src/sass/layout/_grid.scss
+++ b/src/sass/layout/_grid.scss
@@ -73,8 +73,8 @@ main {
   grid-column: 2 / 3;
   grid-row: 2 / 3;
   display: grid;
-  grid-template-columns: 70% 30%;
-  grid-template-rows: 45% 55%;
+  grid-template-columns: 75% 25%;
+  grid-template-rows: 50% 50%;
 }
 
 .projects {
@@ -95,11 +95,22 @@ main {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 3rem 1fr;
+  h2 {
+    align-self: end;
+  }
+}
+.updates {
+  display: grid;
 }
 .trending {
   grid-column: 2 / 3;
   grid-row: 2 / 3;
+}
+.users {
   display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 3rem 1fr;
+  grid-template-columns: 30% 70%;
+  grid-template-rows: 20% 20% 20% 20%;
+  justify-items: start;
+  align-items: center;
+  align-content: space-between;
 }
