--- a/src/sass/components/_main.scss
+++ b/src/sass/components/_main.scss
@@ -11,9 +11,14 @@ main {
     font-size: 0.9rem;
     font-weight: var(--font-boldish);
   }
+  .shadow {
+    box-shadow: 5px 5px 12px -7px var(--color-small-line);
+  }
 }
+
+//PROJECTS
 .project {
-  margin: 0.8rem 0.8rem;
+  margin: 0.6rem 0.8rem;
   padding: 0.8rem 1rem;
   position: relative;
   background-color: var(--color-second);
@@ -38,6 +43,8 @@ main {
     padding: 0 1rem;
   }
 }
+
+//ANNOUNCEMENTS
 .announcements {
   h2 {
     margin: 0 0 0 0.4rem;
@@ -64,14 +71,15 @@ main {
     border: none;
   }
 }
+
+//TRENDING
 .trending {
-  margin-top: 0.6rem;
   h2 {
     margin: 0 0 0 0.4rem;
   }
   .users {
-    margin: 0.8rem 1.2rem 0rem 0.4rem;
-    padding: 0.4rem 1rem;
+    margin: 0.8rem 1.2rem 0.6rem 0.4rem;
+    padding: 0.8rem 1.6rem;
     background-color: var(--color-second);
     border-radius: 10px;
   }
@@ -87,9 +95,14 @@ main {
     width: 1.2em;
     height: 1.2em;
   }
-
+  .username {
+    margin: 0 0 2% 0;
+    font-size: 0.8rem;
+  }
   .tagline {
-    display: block;
+    margin: 2% 0 0 0;
+    font-size: 0.7rem;
+    color: var(--color-small-line);
   }
   .trent {
     background-color: rgb(251, 141, 141);
