--- a/src/sass/layout/_grid.scss
+++ b/src/sass/layout/_grid.scss
@@ -103,14 +103,17 @@ main {
   display: grid;
 }
 .trending {
+  display: grid;
+  grid-template-rows: 2rem 1fr 2rem;
   grid-column: 2 / 3;
   grid-row: 2 / 3;
+  h2 {
+    align-self: end;
+  }
 }
 .users {
   display: grid;
-  grid-template-columns: 30% 70%;
-  grid-template-rows: 20% 20% 20% 20%;
+  grid-template-columns: 20% 80%;
   justify-items: start;
   align-items: center;
-  align-content: space-between;
 }
